@@ -32,6 +32,13 @@
 // Author: Andreas Gogol-Doering <andreas.doering@mdc-berlin.de>
 // ==========================================================================
 // Module header for the sequence module.
+//
+// The sequence module contains:
+//  * Class String and some specializations.
+//  * Class StringSet and its specialization.
+//  * Adaptions of STL classes to the SeqAn Sequence concept.
+//  * Misc sequence-related code such as treating sequences as streams and
+//    lexical comparison helpers.
 // ==========================================================================
 
 #ifndef SEQAN_HEADER_SEQUENCE_H
@@ -41,7 +48,14 @@
 // prerequisites
 
 #include <seqan/basic.h>
-#include <map>
+
+#include <cassert>
+
+#include <map>  // used in string set
+// The classes std::string, std::list and std::vector are adapted in this
+// module.
+#include <string>
+#include <list>
 #include <vector>
 
 //____________________________________________________________________________
@@ -52,17 +66,16 @@
 #include <seqan/sequence/sequence_generated_forwards.h>
 #endif
 
-#include <seqan/sequence/sequence_interface.h>
-#include <seqan/sequence/sequence_stream.h>
-
 //____________________________________________________________________________
 // Miscellaneous sequence-related code.
 
+#include <seqan/sequence/sequence_stream.h>
 #include <seqan/sequence/sequence_lexical.h>
 
 //____________________________________________________________________________
 // Segments: Suffixes, Infixes, Prefixes.
 
+#include <seqan/sequence/sequence_interface.h>
 #include <seqan/sequence/segment_base.h>
 #include <seqan/sequence/segment_infix.h>
 #include <seqan/sequence/segment_suffix.h>
